# EvoHive

./: .gitignore  LICENSE  PDR.md  README.md  evohive-war.html  evohive.yaml  index.html  pyproject.toml  run.sh  server.py
evohive/: __init__.py  cli.py  config.py  sdk.py
evohive/engine/: __init__.py  adaptive.py  answer_graph.py  baseline.py  checkpoint.py  claim_verifier.py  cost_tracker.py  crossover.py  debate.py  dialogue.py  diversity_guard.py  effort.py  elimination_memory.py  embedding.py  events.py  evolution.py  executable_fitness.py  genesis.py  judge.py  lineage.py  logger.py  mutation.py  pairwise_judge.py  persistence.py  pressure_test.py  red_team.py  refine.py  sandbox.py  selection.py  swarm.py  swiss_tournament.py  token_budget.py  tool_refine.py  trajectory.py  trajectory_replay.py  verification.py  web_search.py
evohive/llm/: __init__.py  model_registry.py  provider.py
evohive/models/: __init__.py  evolution_run.py  judgment.py  solution.py  thinker.py
evohive/prompts/: crossover_prompts.py  debate_prompts.py  dialogue_prompts.py  elimination_prompts.py  judge_evaluate.py  mutation_strategies.py  pairwise_prompts.py  pressure_prompts.py  red_team_prompts.py  refine_prompts.py  swarm_prompts.py  thinker_genesis.py
evohive/server/: __init__.py  artifacts.py  catalog.py  costing.py  providers.py  schemas.py
tests/: test_integration.py  test_sandbox.py  test_sdk.py  test_selection.py  test_server.py  test_v3.py
